--- a/homework_submissions/hw3_pt1_numpy_exercises.ipynb
+++ b/homework_submissions/hw3_pt1_numpy_exercises.ipynb
@@ -21,11 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "len(x)"
    ]
   },
   {
@@ -37,11 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(x[0])"
    ]
   },
   {
@@ -53,11 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(x[-1])"
    ]
   },
   {
@@ -69,11 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print (x[0:5])"
    ]
   },
   {
@@ -85,11 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22 23 24 25 26]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(x[-5:])"
    ]
   },
   {
@@ -101,11 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10 12 14 16 18 20 22 24]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "start = 2\n",
+    "stop = 26\n",
+    "step = 2\n",
+    "print(x[start:stop:step])"
    ]
   },
   {
@@ -118,11 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
    "source": [
-    "y = None # Your code here"
+    "y = x[:9].reshape(3, 3)\n",
+    "print(y)"
    ]
   },
   {
@@ -134,16 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "y = np.array([\n",
     "    [0, 1, 2],\n",
     "    [3, 4, 5],\n",
     "    [6, 7, 8],\n",
     "])\n",
-    "# Your code here"
+    "print(y[1,1])"
    ]
   },
   {
@@ -155,11 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print (y[0,:])"
    ]
   },
   {
@@ -171,11 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 3 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(y[:,0])"
    ]
   },
   {
@@ -187,12 +276,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2]\n",
+      "  [ 3  4  5]\n",
+      "  [ 6  7  8]]\n",
+      "\n",
+      " [[ 9 10 11]\n",
+      "  [12 13 14]\n",
+      "  [15 16 17]]\n",
+      "\n",
+      " [[18 19 20]\n",
+      "  [21 22 23]\n",
+      "  [24 25 26]]]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.arange(0, 3**3)\n",
-    "z = None # Your code here"
+    "z = x.reshape(3, 3, 3)\n",
+    "print(z)"
    ]
   },
   {
@@ -204,9 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "z = np.array([\n",
     "    [[ 0, 1, 2],\n",
@@ -219,7 +335,7 @@
     "     [21,22,23],\n",
     "     [24,25,26]]\n",
     "])\n",
-    "# Your code here"
+    "print(z[1, 1, 1])"
    ]
   },
   {
@@ -232,11 +348,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "351\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(z.sum())"
    ]
   },
   {
@@ -249,11 +373,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[27 30 33]\n",
+      " [36 39 42]\n",
+      " [45 48 51]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(z.sum(axis=0))"
    ]
   },
   {
@@ -265,17 +399,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 12 21]\n",
+      " [30 39 48]\n",
+      " [57 66 75]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(z.sum(axis=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "has-tools (3.11.13)",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
